infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-app
    labels:
        app: web-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: web-app
    template:
        metadata:
            labels:
                app: web-app
        spec:
            containers:
                - name: web-app
                  image: web-app
                  ports:
                      - containerPort: 3000
